[package]
name = "adbqr"
version = "1.1.0"
description = "A command-line tool for pairing devices with ADB via QR code."
repository = "https://github.com/soxfox42/adbqr"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
crossterm = "0.28.1"
flume = "0.11.0"
mdns-sd = "0.11.5"
nanoid = "0.4.0"
qrcode = "0.14.1"
